--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-playwright-project-90",
+  "name": "@hexlet/code",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@hexlet/testing-task-manager": "^0.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@playwright/test": "^1.53.1",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.2",
+    "@playwright/test": "^1.53.2",
+    "@types/node": "^24.0.10",
+    "@types/react": "^18.0.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
@@ -25,5 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.0"
   }
 }
