--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-     "@playwright/test": "1.54.1",
+    "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
