--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ dist-ssr
 *.sln
 *.sw?
 
-# Playwright
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
+# Tests
+playwright-report
+test-results
