--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+     "postinstall": "npx playwright install chromium",
+  "postci": "npx playwright install chromium"
   },
   "dependencies": {
     "@hexlet/testing-task-manager": "^0.1.1",
