--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "postinstall": "npx playwright install chromium",
-    "postci": "npx playwright install chromium"
+    "postinstall": "npx playwright install",
+    "postci": "npx playwright install"
   },
   "dependencies": {
     "@hexlet/testing-task-manager": "^0.1.1",
